# WikidataTextifier

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
src/: WikidataLabel.py  __init__.py  utils.py
src/Normalizer/: JSONNormalizer.py  TTLNormalizer.py  __init__.py
src/Textifier/: WikidataTextifier.py  __init__.py
tests/: README.md
tests/integration/: test_live_routes.py
tests/unit/: conftest.py  test_json_normalizer.py  test_routes.py  test_textifier.py  test_utils.py  test_wikidatalabel.py
